feat: upgrade server to use virtual threads and enable port reuse